# aoc2023

./: .gitignore  Cargo.toml
src/: lib.rs  math.rs
